<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:background="@drawable/textview_border"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/name"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:hint="@string/actName"
            android:background="@drawable/textview_border"
            android:inputType="text" />

        <EditText
            android:id="@+id/place"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/place"
            android:background="@drawable/textview_border"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/timeFrom"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:hint="@string/timeFrom"
            android:background="@drawable/textview_border"
            android:inputType="none" />

        <EditText
            android:id="@+id/timeTo"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/timeTo"
            android:background="@drawable/textview_border"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/description"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:hint="@string/description"
            android:background="@drawable/textview_border"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/white">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/orange"
            android:text="@string/deleteButton"/>
    </LinearLayout>

</LinearLayout>