<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/brown">

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/registerOdTitle"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textColor="@color/orange"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:hint="@string/email"
            android:background="@drawable/textview_border"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTextView" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/password"

            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/passwordRewrite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/passwordRewrite"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/passwordRe"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordRewrite" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/town"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/town"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surname" />

        <EditText
            android:id="@+id/country"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/country"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/town" />

        <EditText
            android:id="@+id/address"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="Address"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <Button
            android:id="@+id/RegisterButton"

            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/orange"
            android:text="@string/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>