<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_orange"
    tools:context=".activities.RegisterServiceAndProductProviderActivity">

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/registerPUPTitle"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="130dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/companyName"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView" />

    <EditText
        android:id="@+id/description"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/RegisterButtonn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/dark_blue"
        android:text="@string/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>