<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DisplayProductsForSppFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/brown">

        <TextView
            android:id="@+id/creationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productList"
            android:textColor="@color/orange"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp" />

        <!-- Prvo deo za pretragu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp"
            android:background="@color/brown">

            <EditText
                android:id="@+id/search"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:hint="@string/searchHere"
                android:background="@drawable/textview_border"
                android:inputType="text" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:backgroundTint="@color/orange"
                android:text="@string/searchButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp"
            android:background="@color/brown">

            <Spinner
                android:id="@+id/spinner_filter"
                android:spinnerMode="dropdown"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_relation"
                android:spinnerMode="dropdown"
                android:layout_width="50dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/value"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/value"
                android:background="@drawable/textview_border"
                android:inputType="text" />

            <Button
                android:id="@+id/filterButton"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:backgroundTint="@color/orange"
                android:text="@string/filterButton"/>
        </LinearLayout>

        <!-- ScrollView za tabelu sa proizvodima -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:background="@drawable/table_layout_border" />

            </HorizontalScrollView>
        </ScrollView>

    </LinearLayout>

</FrameLayout>